Fix errors in chat screen and workshop screen - Fix error with the input text from chat view hid behind bottom tab bar - Fix error when navigation back from chat screen (bump the react-native-gifted-chat solved it) -  Received the right types for workshop screen components
Update the API keys for a more secured API keys (Update Google API keys in Android and ios project with the new restricted keys)

--- a/branch-app/app/styles/App.scss
+++ b/branch-app/app/styles/App.scss
@@ -86,7 +86,7 @@ $standardSpace: 10px;
   height: 20%;
 }
 .scrollContainer{
-  flex-grow: 1;
+  flex: 1;
   justify-content: flex-start;
   padding-top: $standardSpace;
   padding-bottom: $standardSpace*7;
@@ -179,9 +179,7 @@ $standardSpace: 10px;
 .logoLogin{
   @extend %absoluteCenter;
 }
-.iconButton{
-  // background-color: $alert;
-}
+
 .iconButtonIcon {
   width: 30px;
   height: 30px;
@@ -498,20 +496,15 @@ $standardSpace: 10px;
   padding: 0 $standardSpace*2 0 0;
 }
 .chatToolbarContainer{
-  background-color: $primary_light;  
-  // padding-top: $standardSpace;
+  background-color: $primary_light;
 }
+
 .chatUploadContainer{
-  width: 75px;
+  width: 15%;
 }
 .chatInput{
   @extend %light;
-  width: 100px;
   background-color: $disable;
-  border-radius: 25px;
-  padding: $standardSpace;
-  margin-bottom: calc($standardSpace/2);
-  
 }
 .chatScrollTo{
   background-color: $contrast;
